--- a/link2form.html
+++ b/link2form.html
@@ -14,7 +14,7 @@
 <div id="quoteModal" class="modal">
   <div class="modal-content" style="padding: 0;">
     <iframe 
-      src="https://script.google.com/macros/s/AKfycbyRfCwFzLXWtGCK9kuAbXye362WpyAKwLcqMzkfr_fiO28io8pm9hsQFu70jU2At2IE/exec" 
+      src="https://languagesandwich.github.io/quote-form/page.html"
       style="width: 100%; height: 90vh; border: none;">
     </iframe>
   </div>
